# eggord

./: .gitignore  LICENSE  README.md  eggord.py  mypy.ini  pyoxidizer.bzl  pyproject.toml  pytest.ini  tox.ini
docs/: notes.md  pylint_init_hook.py
eggord/: __init__.py  __main__.py  eggord.py
tests/: conftest.py  test_eggord.py
